# dnssec-validator

./: .gitignore  .gitmodules  BUILD  Build  CHANGELOG  CMakeLists.txt  COPYING  Makefile  Makefile.DANEwin  Makefile.DNSSECwin  Makefile.am  Makefile.bsd  Makefile.freebsd  Makefile.layout  Makefile.libwin  Makefile.lin  Makefile.linux  Makefile.mac  Makefile.main  Makefile.ppapi  Makefile.static_libs  Makefile.unix  Makefile.win  README  README.submodules  authors.info  autogen.sh  build.sh  build_osx_fat.sh  chrome.manifest  compile_ppapi.sh  config_build.sh  configure.ac  dependences.txt  dependencies.txt  install.rdf  install.rdf.template  install_chrome_add_payload.sh  install_chrome_stub.sh  install_osx_safari_add_payload.sh  (+3 more)
add-on/: Makefile.am  Makefile.cr_dnssec  Makefile.cr_tlsa  Makefile.mozz
add-on/chrome-dnssec/common/: detail-info.html  popup.html  popup2.js
add-on/chrome-dnssec/common/_locales/cs/: messages.json
add-on/chrome-dnssec/common/_locales/de/: messages.json
add-on/chrome-dnssec/common/_locales/en/: messages.json
add-on/chrome-dnssec/common/_locales/pl/: messages.json
add-on/chrome-dnssec/native-msg/: background.js  background.js.in  cz.nic.dnssec.validator.json  cz.nic.validator.dnssec.json  cz.nic.validator.dnssec.json.in  manifest.json  manifest.json.in  manifest.json.template  options.html  options.js
add-on/chrome-dnssec/npapi/: background.js
add-on/chrome-tlsa/common/: detail-tlsa.html  popuptlsa.html  popuptlsa.js  popuptlsa2.js
add-on/chrome-tlsa/common/_locales/cs/: messages.json
add-on/chrome-tlsa/common/_locales/de/: messages.json
add-on/chrome-tlsa/common/_locales/en/: messages.json
add-on/chrome-tlsa/common/_locales/pl/: messages.json
add-on/chrome-tlsa/native-msg/: background.js  background.js.in  cz.nic.tlsa.validator.json  cz.nic.validator.tlsa.json  cz.nic.validator.tlsa.json.in  manifest.json  manifest.json.in  manifest.json.template  options.html  options.js
add-on/chrome-tlsa/npapi/: background.js
add-on/chrome2/: background.js  detail-info.html  manifest.json  manifest.json.template  options.html  options.js  popup.html  popup.js  popup2.js
add-on/chrome2/_locales/cs/: messages.json
add-on/chrome2/_locales/de/: messages.json
add-on/chrome2/_locales/en/: messages.json
add-on/chrome2dnssec/: background.js  manifest.json.template  options.html  options.js  popup2.js
add-on/chrome2dnssec/_locales/cs/: messages.json
add-on/chrome2dnssec/_locales/de/: messages.json
add-on/chrome2dnssec/_locales/en/: messages.json
add-on/chrome2tlsa/: background.js  detail-tlsa.html  manifest.json.template  options.html  options.js  popuptlsa.html  popuptlsa.js  popuptlsa2.js
add-on/chrome2tlsa/_locales/cs/: messages.json
add-on/chrome2tlsa/_locales/de/: messages.json
add-on/chrome2tlsa/_locales/en/: messages.json
add-on/firefox/common/: about.xul.in  config_build.sh  install.rdf.in  install.rdf.template
add-on/firefox/common/defaults/preferences/: dnssec.js
add-on/firefox/common/locale/cs-CZ/: dnssec.properties
add-on/firefox/common/locale/de-DE/: dnssec.properties
add-on/firefox/common/skin/: overlay-dnssec.css  overlay-tlsa.css
add-on/firefox/js-ctypes/: config_build.sh
add-on/firefox/js-ctypes/content/: about.js  dnsseclib.js  firefoxOverlay.xul  libs.js  npapi_const.js  overlay.js  preferences.js  preferences.xul  tlsa.js  tlsalib.js  tlsalib.js.in
add-on/firefox/npapi/content/: about.js  firefoxOverlay.xul  overlay.js  tlsa.js
add-on/firefox2/: BUILD  CHANGELOG  COPYING  Makefile  README  build.sh  chrome.manifest  config_build.sh  install.rdf.template
add-on/firefox2/content/: about.js  about.xul  firefoxOverlay.xul  libs.js  npapi_const.js  overlay.js  preferences.js  preferences.xul  tlsa.js
add-on/firefox2/defaults/preferences/: dnssec.js
add-on/firefox2/locale/bg-BG/: aboutwindow.dtd  dnssec.preferences  dnssec.properties  prefwindow.dtd
add-on/firefox2/locale/cs-CZ/: aboutwindow.dtd  dnssec.dtd  dnssec.preferences  dnssec.properties  prefwindow.dtd
add-on/firefox2/locale/de-DE/: aboutwindow.dtd  dnssec.dtd  dnssec.preferences  dnssec.properties  prefwindow.dtd
add-on/firefox2/locale/en-US/: aboutwindow.dtd  dnssec.dtd  dnssec.preferences  dnssec.properties  prefwindow.dtd
add-on/firefox2/skin/: overlay-common.css  overlay-dnssec.css  overlay-tlsa.css  overlay-win-ff4.css  overlay.css
add-on/ie/: build-instruction.txt
add-on/ie/ie-dnssec-tlsa-toolbar/: DNSSECToolBar.aps  DNSSECToolBar.cpp  DNSSECToolBar.def  DNSSECToolBar.dsp  DNSSECToolBar.dsw  DNSSECToolBar.idl  DNSSECToolBar.rc  DNSSECToolBar.vcxproj  DNSSECToolBar.vcxproj.filters  DNSSECToolBarBand.cpp  DNSSECToolBarBand.h  DNSSECToolBarBand.rgs  KBToolBarCtrl.cpp  KbToolBarCtrl.h  Resource.h  StdAfx.cpp  StdAfx.h  ie-dnssec-tlsa-validator.sln
add-on/ie/ie-dnssec-tlsa-toolbar/reglib/: RegDLL.bat
add-on/ie2/: Makefile
add-on/ie2/DNSSECToolbar/: IEdnssec.sln  KBBar.h  KBBar.rc  KBBar.tlb  KBBar.vcxproj  KBBar.vcxproj.filters  KBBarBand.cpp  KBBarBand.h  KBBar_i.c  KBBar_p.c  KBToolBarCtrl.cpp  KbToolBarCtrl.h  Resource.h  dane-plug.h  dnssec-states.gen  ub_dnssec_states.gen  ub_ds.c  ub_ds.h
add-on/ie2/NSIS installer/: dnssec-setup.nsi
add-on/opera2dnssec/: background.js  options.html  options.js
add-on/opera2tlsa/: background.js  manifest.json.template  options.html  options.js
add-on/opera2tlsa/_locales/cs/: messages.json
add-on/opera2tlsa/_locales/de/: messages.json
add-on/opera2tlsa/_locales/en/: messages.json
add-on/safari.safariextension/: Info.plist
add-on/safari2/: Settings.plist
add-on/safari2.safariextension/: Info.plist  Settings.plist  global.html
add-on/safari2.safariextension/js/: core.js  dnssec.js  popup.js  tlsa.js
add-on/safari2.safariextension/popups/: default.html  dnssecpopup.html  dnssecpopup.js  tlsapopup.html  tlsapopup.js
add-on/safari2.safariextension/toolbar/: toolbar.html
add-on/safari2/js/: tlsa.js
core_js-ctypes/: Makefile  Makefile.am  Makefile.core
core_native-msg/: Makefile.am
core_npapi/: Makefile.am
ie/: Build  (+2 more)
static-libs/: Makefile.am
(+395 files in other folders)
